--- a/config/corne.conf
+++ b/config/corne.conf
@@ -7,9 +7,15 @@
 # CONFIG_ZMK_DISPLAY=n
 #CONFIG_ZMK_SLEEP=y
 #CONFIG_ZMK_MOUSE=y
-# Uncomment to increase bluetooth range.  It also uses more battery.
-#CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-CONFIG_ZMK_KEYBOARD_NAME="CorneMini"
 
 # CONFIG_ZMK_STUDIO=yes
 # CONFIG_ZMK_STUDIO_LOCKING=n
+
+# Uncomment the following line to increase the keyboard's wireless range
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Enable eager debouncing
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
+
+CONFIG_ZMK_KEYBOARD_NAME="CorneMini"
